finace Installments & reporting Tuition plans
